fix: scrollbar issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,24 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-/* width */
+/* WebKit (Chrome, Safari, Opera) */
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: transparent;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 5px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #777;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+html:hover {
+  scrollbar-color: #777 transparent;
 }
